--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,24 @@
 Package: lsd
-Title: LSD package
-Version: 5.11
+Title: LSD Package
+Version: 5.33
 Date: 2018-10-24
 Authors@R: c(
     person("Darcy", "Webber", email = "darcy@quantifish.co.nz", role = "cre"),
-    person("Merrill", "Rudd", email = "merrill@quantifish.co.nz", role = "aut"))
+    person("Merrill", "Rudd", email = "merrillrudd@gmail.com", role = "aut"))
 Description: The LSD package for manipulating and plotting LSD inputs and outputs.
 Encoding: UTF-8
-Depends:
-    roxygen2,
-    reshape2,
-    ggplot2,
-    tidyr,
+Imports:
     dplyr,
-    rstan,
+    ggplot2,
+    ggrepel,
     methods,
     RColorBrewer,
-    ggrepel
-Suggests: testthat
+    reshape2,
+    rstan,
+    tidyr
+Suggests: 
+    roxygen2,
+    testthat
 License: MIT + file LICENSE
 RoxygenNote: 6.1.0
 Collate:
