--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(.dpselect)
 export(.quantile)
 export(TACC)
-export(calc_Tmin)
 export(compare_multi_risk)
 export(compare_multi_risk_wBias)
 export(create_rules)
@@ -57,7 +56,6 @@ export(plot_surplus_production)
 export(plot_tag_residuals)
 export(plot_vulnerable_biomass)
 export(plot_vulnerable_reference_biomass)
-export(read_fit)
 export(read_stan_map)
 export(read_stan_mcmc)
 export(read_stan_var)
@@ -68,7 +66,9 @@ exportMethods(initialize)
 exportMethods(show)
 import(dplyr)
 import(ggplot2)
+import(ggrepel)
 import(methods)
+import(reshape2)
 import(rstan)
 importClassesFrom(rstan,stanfit)
 importFrom(plyr,adply)
