--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,8 +66,8 @@ import(dplyr)
 import(ggplot2)
 import(ggrepel)
 import(methods)
-import(reshape2)
 import(rstan)
+import(utils)
 importClassesFrom(rstan,stanfit)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,gray)
@@ -75,6 +75,7 @@ importFrom(grDevices,hcl)
 importFrom(plyr,adply)
 importFrom(reshape2,melt)
 importFrom(stats,median)
+importFrom(stats,quantile)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(utils,head)
