still trying to get plots going

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ import(methods)
 import(rstan)
 import(utils)
 importClassesFrom(rstan,stanfit)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,gray)
 importFrom(grDevices,hcl)
