--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,12 +76,16 @@ importFrom(RColorBrewer,brewer.pal)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,gray)
 importFrom(grDevices,hcl)
+importFrom(parallel,detectCores)
 importFrom(plyr,adply)
 importFrom(reshape2,melt)
 importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
+importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
+importFrom(tidyr,spread)
 importFrom(utils,head)
 importFrom(utils,tail)
 importFrom(utils,write.csv)
