--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: r
-sudo: false
+
 cache: packages
+sudo: false
+warnings_are_errors: false
+
+r_packages:
+  - roxygen2
+  - testthat
 
 matrix:
   include:
