updates to code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ import(rstan)
 import(utils)
 importClassesFrom(rstan,stanfit)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,gray)
 importFrom(grDevices,hcl)
