updated model code parser such that parameters {} can be include in parameters.stan in the same way as functions.stan

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ exportMethods(show)
 import(dplyr)
 import(ggplot2)
 import(ggrepel)
+import(ggthemes)
 import(loo)
 import(methods)
 import(rstan)
