--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,7 +57,9 @@ export(read_catch)
 export(read_stan_map)
 export(read_stan_mcmc)
 export(read_stan_var)
+export(table_compare_parameters)
 export(table_compare_residuals)
+export(table_parameters)
 export(table_residuals)
 export(theme_lsd)
 exportClasses(lsdOutput)
