tidying up lots of code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(plot_F)
 export(plot_aw_cpue_lm)
 export(plot_biomass)
 export(plot_catch)
+export(plot_compare_cpue)
 export(plot_compare_q)
 export(plot_compare_recruitment)
 export(plot_compare_selectivity)
@@ -50,8 +51,11 @@ export(plot_ssb)
 export(plot_ssb_recruitment)
 export(plot_surplus_production)
 export(plot_tag_residuals)
+export(plot_total_biomass)
 export(plot_vulnerable_biomass)
 export(plot_vulnerable_reference_biomass)
+export(plot_vulnref_AW)
+export(plot_vulnref_rel)
 export(read_SSB)
 export(read_catch)
 export(read_stan_map)
@@ -77,12 +81,14 @@ import(utils)
 importClassesFrom(rstan,stanfit)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(ggrepel,geom_text_repel)
+importFrom(ggridges,geom_density_ridges)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,gray)
 importFrom(grDevices,hcl)
 importFrom(parallel,detectCores)
 importFrom(plyr,adply)
 importFrom(reshape2,melt)
+importFrom(rstan,read_rdump)
 importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,rnorm)
