adding compare LFs code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,9 @@ export(plot_F)
 export(plot_aw_cpue_lm)
 export(plot_biomass)
 export(plot_catch)
+export(plot_catch_rule)
 export(plot_compare_cpue)
+export(plot_compare_lfs)
 export(plot_compare_q)
 export(plot_compare_recruitment)
 export(plot_compare_selectivity)
