import package scales

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(plot_lfs_resid)
 export(plot_lfs_resid2)
 export(plot_maturation)
 export(plot_mls)
+export(plot_money_biomass)
 export(plot_mp_rules)
 export(plot_numbers)
 export(plot_offset_cpue)
@@ -79,6 +80,7 @@ import(ggthemes)
 import(loo)
 import(methods)
 import(rstan)
+import(scales)
 import(utils)
 importClassesFrom(rstan,stanfit)
 importFrom(RColorBrewer,brewer.pal)
