--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(plot_lfs_resid2)
 export(plot_maturation)
 export(plot_mls)
 export(plot_money_biomass)
+export(plot_movement)
 export(plot_mp_rules)
 export(plot_numbers)
 export(plot_offset_cpue)
