tidying up some R code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,10 +81,10 @@ import(ggthemes)
 import(loo)
 import(methods)
 import(rstan)
-import(scales)
 import(utils)
 importClassesFrom(rstan,stanfit)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(forcats,fct_rev)
 importFrom(ggrepel,geom_text_repel)
 importFrom(ggridges,geom_density_ridges)
 importFrom(grDevices,colorRampPalette)
