--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(plot_lfs_resid2)
 export(plot_maturation)
 export(plot_mls)
 export(plot_money_biomass)
+export(plot_money_vuln_biomass)
 export(plot_movement)
 export(plot_mp_rules)
 export(plot_numbers)
@@ -59,6 +60,7 @@ export(plot_total_biomass)
 export(plot_vulnerable_biomass)
 export(plot_vulnerable_reference_biomass)
 export(plot_vulnref_AW)
+export(plot_vulnref_AW_proj)
 export(plot_vulnref_rel)
 export(read_SSB)
 export(read_catch)
