adding handling changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(plot_aw_cpue_lm)
 export(plot_biomass)
 export(plot_catch)
 export(plot_catch_rule)
+export(plot_catch_save)
 export(plot_compare_cpue)
 export(plot_compare_lfs)
 export(plot_compare_q)
@@ -35,6 +36,7 @@ export(plot_lfs_resid2)
 export(plot_maturation)
 export(plot_mls)
 export(plot_money_biomass)
+export(plot_money_vuln_biomass)
 export(plot_movement)
 export(plot_mp_rules)
 export(plot_numbers)
