add new SSB projn plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(plot_selectivity)
 export(plot_sex_ratio)
 export(plot_snail)
 export(plot_ssb)
+export(plot_ssb_AW_proj)
 export(plot_ssb_recruitment)
 export(plot_surplus_production)
 export(plot_tag_residuals)
