tidying some plots and code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,6 +98,7 @@ importFrom(parallel,detectCores)
 importFrom(plyr,adply)
 importFrom(reshape2,melt)
 importFrom(rstan,read_rdump)
+importFrom(scales,pretty_breaks)
 importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,rnorm)
