work on MPs and minor edits to code

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,13 +41,13 @@ Collate:
     'extract-list.R'
     'lsdSave.R'
     'parse-model-code.R'
-    'plot-F.R'
     'plot-biomass.R'
     'plot-catch.R'
     'plot-compare-refpoints.R'
     'plot-compare.R'
     'plot-cpue.R'
     'plot-data-extent.R'
+    'plot-fishing-mortality.R'
     'plot-growth.R'
     'plot-handling-mortality.R'
     'plot-length-frequency.R'
