adding MP plot stuff back in

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(plot_mp_rules)
 export(plot_numbers)
 export(plot_offset_cpue)
 export(plot_offset_cpue_lm)
+export(plot_proj_numbers)
 export(plot_puerulus)
 export(plot_q)
 export(plot_recruitment)
