--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(looic)
 export(lsdSave)
 export(parse_model_code)
 export(plot_F)
+export(plot_HR_rapid_updates)
 export(plot_aw_cpue_lm)
 export(plot_biomass)
 export(plot_catch)
@@ -18,6 +19,8 @@ export(plot_catch_rule)
 export(plot_catch_save)
 export(plot_compare_cpue)
 export(plot_compare_lfs)
+export(plot_compare_lfs_old)
+export(plot_compare_numbers)
 export(plot_compare_q)
 export(plot_compare_recruitment)
 export(plot_compare_selectivity)
@@ -33,6 +36,7 @@ export(plot_initial_numbers)
 export(plot_lfs)
 export(plot_lfs_resid)
 export(plot_lfs_resid2)
+export(plot_lfs_resid_OSA)
 export(plot_maturation)
 export(plot_mls)
 export(plot_money_biomass)
@@ -79,6 +83,8 @@ exportMethods(extract)
 exportMethods(initialize)
 exportMethods(show)
 import(dplyr)
+import(ggforce)
+import(ggokabeito)
 import(ggplot2)
 import(ggrepel)
 import(ggthemes)
@@ -88,7 +94,9 @@ import(rstan)
 import(utils)
 importClassesFrom(rstan,stanfit)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(compResidual,resMulti)
 importFrom(forcats,fct_rev)
+importFrom(ggforce,facet_zoom)
 importFrom(ggrepel,geom_text_repel)
 importFrom(ggridges,geom_density_ridges)
 importFrom(grDevices,colorRampPalette)
