--- a/NAMESPACE
+++ b/NAMESPACE
@@ -97,6 +97,8 @@ importFrom(RColorBrewer,brewer.pal)
 importFrom(compResidual,resMulti)
 importFrom(forcats,fct_rev)
 importFrom(ggforce,facet_zoom)
+importFrom(ggokabeito,scale_color_okabe_ito)
+importFrom(ggokabeito,scale_fill_okabe_ito)
 importFrom(ggrepel,geom_text_repel)
 importFrom(ggridges,geom_density_ridges)
 importFrom(grDevices,colorRampPalette)
