--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ import(rstan)
 import(utils)
 importClassesFrom(rstan,stanfit)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(compResidual,rdirichlet)
 importFrom(compResidual,resMulti)
 importFrom(forcats,fct_rev)
 importFrom(ggforce,facet_zoom)
